gcc/testsuite/gm2/iso/fail/lengthsubexpr.mod
MODULE lengthsubexpr ;


VAR
   c: CARDINAL ;
   a: CHAR ;
BEGIN
   a := 'a' ;
   c := LENGTH ("Hello world") + a
END lengthsubexpr.
